--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,8 +1,9 @@
-<html>
-<head>
-	<title>HomeWork Module 2</title>
-	<meta name="viewport" content="width=device-width, user-scalable=no" />
-	<link rel="stylesheet" type="text/css" href="css/mycss.css">
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="css/mycss.css">
 </head>
 <body>
 	<h1>Our Menu</h1>
